2003-08-13  Not Zed  <NotZed@Ximian.com>

	* camel-folder-summary.c (camel_folder_summary_remove_range): Fix
	the range check, we were stopping removal of 1 or 2 removals, for
	some odd and completely uncomprehensible reason.  Perhaps debug
	left in?

2003-08-11  Not Zed  <NotZed@Ximian.com>

	** See bug #45504.

	* camel-service.c (camel_gethostbyname): duh, pthread_create
	returns the error code directly, not via errno.
	(camel_gethostbyaddr): Same, also properly handle the failure
	case.

2003-08-01  Not Zed  <NotZed@Ximian.com>

	** See bug #47208.

	* camel-filter-search.c (match_all): match-all with no arguments	
	should always return TRUE.

	* camel-folder-search.c (camel_folder_search_execute_expression):
	print a warning when we get an invalid result type & fixed a leak
	for that case.
	
2003-07-25  Jeffrey Stedfast  <fejj@ximian.com>

	* camel-mime-utils.c (header_decode_word): Revert NotZed's fix for
	bug #42170 - this causes even more problems than it solves. See
	bug #46331 for info. Basically, each address header would be
	converted to UTF-8 twice which means no raw 8bit address header
	would render correctly.
	(header_decode_mailbox): Perform a sanity check on the resultant
	addr->str to make sure that it is valid UTF-8, if not convert it
	to UTF-8. Fixes bug #42170.

2003-07-17  Timo Sirainen <tss@iki.fi>

	** See bug #42573
	
	* providers/imap/camel-imap-folder.c (do_append): Only free the
	response after we have finished the literal request, otherwise we
	could try processing folder updates incorrectly.

2003-07-01  Jeffrey Stedfast  <fejj@ximian.com>

	* camel-sasl-digest-md5.c (digest_response): Don't quote the
	charset value, the qop value, nor the response value. Fixes bug
	#45712.

2003-07-01  Jeffrey Stedfast  <fejj@ximian.com>

	* camel-mime-utils.c (header_format_date): Use gmtime_r() instead
	of using gmtime() and memcpy() to try and be "atomic".

2003-06-30  Dan Winship  <danw@ximian.com>
